--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
               </p>
             </div>
           </div>
+          <div class="row video">
+              <div class="col-xs-12 col-md-12" id="video">
+                  <iframe width="424" height="238" src="https://www.youtube.com/embed/cypV6LWPbmM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+          </div>
         </div>
       </div>
     </section>
