--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Linea Icons -->
-    <link href="linea/styles.css" rel="stylesheet">
+    <!-- <link href="linea/styles.css" rel="stylesheet"> -->
     <!-- Owl Carousel -->
     <link href="css/owl.carousel.min.css" rel="stylesheet">
     <link href="css/owl.theme.default.min.css" rel="stylesheet">
