--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </a>
         </li>
         <li>
-          <a href="#portfolio">Discography
+          <a href="#portfolio">Music
           </a>
         </li>
       </ul>
@@ -133,7 +133,7 @@
     <section id="portfolio">
       <div class="portfolio-background">
         <div class="container">
-          <h2 class="section-title">Discography
+          <h2 class="section-title">Music
           </h2>
           <div id="mix-container">
             <div class="row">
