--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="home-content">
           <!-- Avatar image source
           <!-- Scroll down button -->
-          <a class="scroll-down" href="#video">
+          <a class="scroll-down" href="#portfolio">
             <i class="fa fa-angle-double-down">
             </i>
           </a>
