--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
     <div class="home-background">
       <div class="home-layer">
         <div class="home-content">
-          <!-- Avatar image source
           <!-- Scroll down button -->
           <a class="scroll-down" href="#portfolio">
             <i class="fa fa-angle-double-down">
@@ -241,6 +240,7 @@
                     Beach.
                   </p>
                 </div>
+                <iframe class="tracklist" src="https://open.spotify.com/embed/album/49i8driEZnFoNngp81zsnd" width="640" height="400" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
               </div>
               <!-- end popup content -->
             </div>
