--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
                     & the changes at his home, Manzanillo St. is a further exploration into Lippi's Rock & Roll influences.
                   </p>
                 </div>
+                <iframe class="tracklist" src="https://open.spotify.com/embed/album/06ibXI8wQlTrSADpGITFwL" width="640" height="400" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
               </div>
               <!-- end popup content -->
             </div>
@@ -311,6 +312,7 @@
                   <br>
                   <p>Art by Josh Lippi & Brit O'Brien</p>
                 </div>
+                <iframe class="tracklist" src="https://open.spotify.com/embed/album/38AUTmtttZRb6DBxKx0yMp" width="640" height="175" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
               </div>
               <!-- end popup content -->
             </div>
@@ -346,6 +348,7 @@
                     recorded by Tommy Guerrero at TG's Spot in San Francisco, CA. Mixed by Patrick Brown for Different Fur
                     Studios and Josh Lippi. Mastered by Joe Bagale. Album Photo by Trevor Traynor. </p>
                 </div>
+                <iframe class="tracklist" src="https://open.spotify.com/embed/album/0inJy3ERJQh7EDphPmgaeR" width="640" height="400" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
               </div>
               <!-- end popup content -->
             </div>
@@ -379,6 +382,7 @@
                   <br>
                   <p>Released April 11, 2014</p>
                 </div>
+                <iframe class="tracklist" src="https://open.spotify.com/embed/track/5ICTkDXOYgBMJ0njozq85t" width="640" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
               </div>
               <!-- end popup content -->
             </div>
@@ -412,6 +416,7 @@
                   <br>
                   <a href="http://youtu.be/ugzr_lhFtVY" class="sirens" "_blank">Watch on YouTube</a>
                 </div>
+                <iframe class="tracklist" src="https://open.spotify.com/embed/album/5wGXEtMmD5mMxFZLMsQJUh" width="640" height="155" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
               </div>
               <!-- end popup content -->
             </div>
