--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <link href="css/style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./js/javascript.js"></script>
 </head>
 
 <body>
