--- a/home.html
+++ b/home.html
@@ -496,7 +496,7 @@
                 </div>
               </div>
               
-              <button type="submit" class="btn col-sm-4 col-sm-offset-4">
+              <button type="submit" name="submit" class="btn col-sm-4 col-sm-offset-4">
                 Send
                 <i class="fa fa-paper-plane"></i>
               </button>
