--- a/home.html
+++ b/home.html
@@ -468,7 +468,7 @@
             <h2 class="section-title">Contact
               </h2>
           <div class="row">
-            <form class="form-horizontal col-sm-6 col-sm-offset-3" action="contact.php" method="POST" enctype="multipart/form-data" role="form">
+            <form class="form-horizontal col-sm-6 col-sm-offset-3" action="./contact.php" method="POST" enctype="multipart/form-data" role="form">
               <div class="form-group">
                 <div class="input-group">
                   <span class="input-group-addon">
